fix margin pushing on mobile

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -10,6 +10,10 @@ $container: 1000px;
   @include max(1160px) {
     margin-right: 20px;
   }
+
+  @include max($tablet) {
+    margin-right: auto;
+  }
 }
 
 .clearfix {
